# ims

./: .editorconfig  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  meson.build  meson_options.txt
build-aux/meson/: meson-post-install.sh
data/: meson.build
data/config/: ims.conf  meson.build
data/schema/: meson.build  org.halfbaked.ims.gschema.xml
data/systemd/: ims.service.in  meson.build
doc/: job.json
plugins/: meson.build
plugins/rotate/: meson.build  rotate.plugin  rotate.py
plugins/save/: meson.build  pipeline-addin.vala  save.plugin  save.vala
src/: app.vala  database.vala  dbus.vala  main.vala  meson.build  model.vala  plugin-manager.vala
src/app/: app.vala  config.vala  database.vala  dbus.vala  ims.gresource.xml  meson.build  model.vala  pipeline-controller.vala  pipeline-manager.vala  plugin-manager.vala  router.vala
src/app/routes/: elements.vala  image.vala  images.vala  jobs.vala  pipelines.vala
src/config/: ims-config.c  ims-config.h  ims-config.vapi  meson.build
src/lib/: element.vala  error.vala  image.vala  job.vala  meson.build  pipeline-addin.vala  pipeline-manager.vala  pipeline.vala  plugin.vala  repository.vala  router-addin.vala  router.vala  sink.vala  source.vala
src/lib/plugin/: ims-element-provider.c  ims-element-provider.h  ims-enums.c.template  ims-enums.h.template  ims-pipeline-addin.c  ims-pipeline-addin.h  ims-plugin.c  ims-plugin.h  ims-plugin.vapi  ims-router-addin.c  ims-router-addin.h  meson.build
src/routes/: image.vala
tests/: common.sh  image-router-test.vala  meson.build  pipeline-test.vala  rest-test.sh
